Several SQL tests were fixed.